# llmkit-python

./: CHANGELOG.md  README.md  pyproject.toml
examples/: agent.py  batch.py  caching.py  catalogue.py  image.py  middleware.py  music.py  quickstart.py  reasoning.py  streaming.py  upload.py  video.py
src/llmkit/: __init__.py  agent.py  batch.py  caching.py  catalogue.py  client.py  errors.py  http.py  image.py  job.py  middleware.py  models.py  music.py  paths.py  sigv4.py  speech.py  structs.py  telemetry.py  transforms.py  types.py  wire.py  wire_version.py
src/llmkit/builders/: __init__.py  agent.py  batch.py  catalogue.py  image.py  music.py  speech.py  stream.py  text.py  transcription.py  upload.py  video.py
src/llmkit/providers/: __init__.py
tests/: test_agent.py  test_batch.py  test_builders.py  test_caching.py  test_catalogue.py  test_catalogue_http.py  test_catalogue_wire.py  test_custom_headers.py  test_errors.py  test_examples.py  test_http.py  test_image.py  test_image_integration.py  test_integration_generated.py  test_job.py  test_lifecycle_wire.py  test_local_default.py  test_models_http.py  test_models_parsers.py  test_multipart_escape.py  test_music.py  test_no_default_contract.py  test_paths.py  test_provider_info.py  test_request_building.py  test_request_wire.py  test_response_wire.py  test_responses.py  test_sigv4.py  test_sigv4_wire.py  test_speech.py  test_stream.py  test_supports.py  test_telemetry.py  test_transcription.py  test_transforms.py  test_video.py  test_wire.py  wire_inputs.py
