[project]
name = "llmkit"
version = "0.3.0"
description = "Unified LLM client library. Single API, multiple providers, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aktagon Ltd.", email = "christian@aktagon.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/aktagon/llmkit-python"
Source = "https://github.com/aktagon/llmkit-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[dependency-groups]
dev = ["pytest>=8.0"]
