[project]
name = "llmkit"
version = "2.0.0"
description = "Unified LLM client library for Python — one API, 27 providers (Anthropic, OpenAI, Google Gemini, AWS Bedrock, Mistral, Groq, DeepSeek, +20 more), zero external dependencies (stdlib only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aktagon Ltd.", email = "christian@aktagon.com" }]
dependencies = []
keywords = [
    "llm",
    "ai",
    "llm-client",
    "ai-sdk",
    "agents",
    "anthropic",
    "claude",
    "openai",
    "gpt",
    "gemini",
    "bedrock",
    "mistral",
    "groq",
    "streaming",
    "tool-calling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://llmkit.aktagon.com"
Source = "https://github.com/aktagon/llmkit-python"
Issues = "https://github.com/aktagon/llmkit-python/issues"
Changelog = "https://github.com/aktagon/llmkit-python/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[dependency-groups]
dev = ["pytest>=8.0"]
